--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 # Ignore bundler config.
 /.bundle
 
+# Ignore the default SQLite database.
+/db/*.sqlite3
+/db/*.sqlite3-*
+
+node_modules
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -29,9 +35,3 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
-# Ignoew node files
-/node_modules
-
-# Ignore local database config file
-/config/database.yml
