--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,18 @@
 databases:
-  - name: mysite
-    databaseName: mysite
-    user: mysite
+  - name: microverse
+    databaseName: microverse_3gfa
+    user: microverse_3gfa_user
 
 services:
   - type: web
-    name: mysite
+    name: budgetApp
     runtime: ruby
     buildCommand: "./bin/render-build.sh"
     startCommand: "bundle exec puma -C config/puma.rb"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: mysite
+          name:  microverse_3gfa
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
